<resources>
    <string name="app_name" translatable="false">Moallem</string>
    <string name="notification_channel_id" translatable="false">MoallemCH_002</string>
    <string name="deviceLangauge">default</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="facebook_app_id" translatable="false">675304036162611</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb675304036162611</string>
    <string name="twitter_consumer_key" translatable="false">mDZmGt9HMTGoBCZt7lOepureU</string>
    <string name="twitter_consumer_secret" translatable="false">YCNMavnPcT86vrIJv7CNXG3bghuP9qGizkveFwmiyTTSibLnmy</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sample_text" translatable="false">mvdflfvldlfvldlfnvldnlvlldnflvnldnvlndlnvldnlnvlndlnvdnlvndlkfndfonvodnovndonvdnvdnvnvjnfd</string>
    <string name="wrong_message">Something went wrong</string>
    <string name="ok">confirm_end_session</string>
    <string name="cancel">cancel_end_session</string>
    <string name="waiting_msg">Please wait for a teacher or press back button to cancel\nNote : your balance will NOT be changed until a teacher accept your question</string>
    <string name="end_session_text">End</string>
    <string name="exit_session_text">Exit</string>
    <string name="edit_your_image_text" >Edit your image</string>
    <string name="purchase_button">Purchase</string>
    <string name="check_internet_msg">Please check Internet Connection</string>
    <string name="valid_num_msg">Please enter valid number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="enough_for_1question">Enough for 1 tough question</string>
    <string name="_20_minutes">20 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_60_minutes">60 minutes</string>
    <string name="congrate_msg">Congratulation!  Your Minutes have been added to your account  Start learing NOW!</string>
    <string name="thanks_msg4using_maollem">Thanks for using Moallem</string>
    <string name="verification_pin_code">Verification Pin Code</string>
    <string name="write_pincode_text">Please write the pin code sent to</string>
    <string name="resend_pin_code">Resend Pin Code?</string>
    <string name="online_text">Online</string>
    <string name="connect_text">Connect</string>
    <string name="session_ended">Session was ended</string>
    <string name="speak_now">Speak now …</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_textbotton">Login</string>
    <string name="weclome_to_moallem">Weclome to Moallem!</string>
    <string name="sign_up_textbutton">Sign up</string>
    <string name="already_have_acccont">Already have an acccont? please Login</string>
    <string name="tell_moallems_what_you_need">Tell our moallems what helps you need?</string>
    <string name="done_buttontext">Done</string>
    <string name="username_hint">Username</string>
    <string name="education_hint">Education</string>
    <string name="sign_up_buttontext">Sign up</string>
    <string name="view_textbutton">View</string>
    <string name="new_version_notifai">New version of the app was released ,update now?</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_dont_show_again">don\'t show again?</string>
    <string name="session_navigationdrawer">Sessions</string>
    <string name="minutes_navigationdrawer">Minutes</string>
    <string name="signout_navigationdrawer">Sign out</string>
    <string name="make_sure_sim_insered">Please make sure SIM card is inserted</string>
    <string name="this_section_not_allowed">this section is not allowed for your country for this version</string>
    <string name="wrong_msg_try_again">Something went wrong please try again</string>
    <string name="dont_have_credit">You don\'t have enough credit to purchase minutes</string>
    <string name="pin_sent_toast">Pin Code has been sent</string>
    <string name="invalid_pincode_toast">invalid pin code</string>
    <string name="alert_sure_to_end_question">Are you sure to end this question?</string>
    <string name="balance_lessthan1minutes_toast">Your balance now less than one minute</string>
    <string name="cropping_failed">Cropping failed Please try again</string>
    <string name="offline_text">Offline</string>
    <string name="enter_valid_data">Please enter valid data</string>
    <string name="question_posted">Question has been posted</string>
    <string name="verify_email_sent">Email has sent verify the email and try again</string>
    <string name="verify_email_toast">Please verify your email</string>
    <string name="question_deleted">Question has been deleted</string>
    <string name="exceeding_number_of_Sending_pincode">You exceeded maximum number of sending pin code</string>
    <string name="done_take_photo">Done</string>
    <string name="failed_send_msg">Failed</string>
    <string name="sending_toast">Sending …</string>
    <string name="press_mic_and_release">Press mic icon then release when finish</string>
    <string name="permissions_denied">permissions denied</string>
    <string name="get50off" >Get 5 minutes when you refer a friend to use Moallem\ncopy the code and let your friend paste in his app</string>
    <string name="arabic_school">Arabic School</string>
    <string name="language_school">Language School</string>
    <string name="free_minutes">Free Minutes</string>
    <string name="enter_phone_number">Please enter phone number</string>
    <string name="signup_or_login_first">Please sign up or login first</string>
    <string name="empty_balance_msg">Your balance must be more or equal 1 minutes</string>
    <string name="free_sessions">Free Sessions!</string>
    <string name="click_to_copy_code">Click to copy code!</string>
    <string name="enter_your_promo_gift_code">Enter your promo/gift code</string>
    <string name="signup_or_login">Sign up or login</string>

    <string-array name="egyptOperatersCode" translatable="false">
        <item>60201</item>
        <item>60202</item>
        <item>60203</item>
    </string-array>

    <string-array name="egyptOperatersName">
        <item>Orange</item>
        <item>Vodafone</item>
        <item>Etisalat</item>
    </string-array>

    <string-array name="egyptProductCats" translatable="false">
        <item>Minutes-Orange-Egypt</item>
        <item>Minutes-Vodafone-Egypt</item>
        <item>Minutes-Etisalat-Egypt</item>
    </string-array>


    <string-array name="egyptPrices">
        <item>3.99 EGP</item>
        <item>6.99 EGP</item>
        <item>11.99 EGP</item>
        <item>23.99 EGP</item>
    </string-array>


    <string-array name="egyptPricesPromocode" >
        <item>1.99 EGP</item>
        <item>3.99 EGP</item>
        <item>6.99 EGP</item>
        <item>11.99 EGP</item>
    </string-array>

    <string-array name="productsName" translatable="false">
        <item>10M_price</item>
        <item>20M_price</item>
        <item>30M_price</item>
        <item>60M_price</item>
    </string-array>



    <string-array name="productsPromocodeName" translatable="false">
        <item>10M_promo</item>
        <item>20M_promo</item>
        <item>30M_promo</item>
        <item>60M_promo</item>
    </string-array>
</resources>
