<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.fragments.SignupFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ProgressBar

            android:layout_alignParentTop="true"
            android:visibility="invisible"
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:indeterminate="true"
            />

        <TextView
            android:id="@+id/signup_title"
            android:layout_marginTop="25sp"
            android:textColor="@color/app_title_color"
            android:fontFamily="@font/harabara"
            android:layout_centerHorizontal="true"
            android:textSize="70sp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <ImageView
            style="@style/imagesignuploginStyle"
            android:layout_below="@id/signup_title"
            android:src="@drawable/profileicon" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_textinput_username"
            android:layout_below="@id/signup_title"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:hint="@string/username_hint">

            <android.support.v7.widget.AppCompatEditText
                style="@style/EdittextStyle"
                android:id="@+id/signup_username"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            style="@style/imagesignuploginStyle"
            android:layout_below="@id/signup_textinput_username"
            android:src="@drawable/emailicomn" />

        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            android:id="@+id/signup_textinput_email"
            android:layout_below="@id/signup_textinput_username"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint">

            <EditText
                style="@style/EdittextStyle"
                android:id="@+id/signup_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            style="@style/imagesignuploginStyle"
            android:layout_below="@id/signup_textinput_email"
            android:src="@drawable/lockicon_copy" />

        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            android:id="@+id/signup_textinput_password"
            android:layout_below="@id/signup_textinput_email"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint">

            <EditText
                style="@style/EdittextStyle"
                android:id="@+id/signup_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>




        <ImageView
            style="@style/imagesignuploginStyle"
            android:layout_below="@id/signup_textinput_password"
            android:src="@drawable/graduation_icon" />

        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            android:id="@+id/signup_textinput_edu"
            android:layout_below="@id/signup_textinput_password"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/education_hint">

            <EditText
                android:gravity="top"
                android:textSize="17sp"
                android:id="@+id/signup_edu"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup

            android:checkedButton="@id/radiobutton1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/signup_textinput_edu"
            android:id="@+id/school_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:buttonTint="@color/app_title_color"
                android:id="@+id/radiobutton1"
                android:textColor="@color/app_title_color"
                android:text="@string/arabic_school"
                android:layout_width="200dp"
                android:layout_height="50dp" />
            <RadioButton
                android:buttonTint="@color/app_title_color"
                android:id="@+id/radiobutton2"
                android:textColor="@color/app_title_color"
                android:text="@string/language_school"
                android:layout_width="200dp"
                android:layout_height="50dp" />
        </RadioGroup>

        <Button
            android:fontFamily="@font/roboto_regular"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/sign_button_style"
            android:textAllCaps="false"
            android:layout_below="@id/school_type"
            android:id="@+id/signup_buttonsignup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_buttontext" />

    </RelativeLayout>


</ScrollView>