<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.fragments.OptionFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/option_title"
                android:layout_marginTop="25sp"
                android:textColor="@color/app_title_color"
                android:fontFamily="@font/harabara"
                android:layout_centerHorizontal="true"
                android:textSize="70sp"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/option_subtitle"
                android:layout_below="@id/option_title"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="50dp"
                android:textColor="@color/app_text_color"
                android:fontFamily="@font/roboto_regular"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:text="@string/weclome_to_moallem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



            <Button
                android:id="@+id/option_button_option1"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_regular"
                android:textSize="25sp"
                android:textColor="@color/app_title_color"
                android:background="@drawable/option_button_style"
                android:text="@string/sign_up_textbutton"
                android:layout_marginTop="90dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/option_title"
                android:layout_width="270dp"
                android:layout_height="wrap_content" />



            <TextView
                android:gravity="center"
                android:layout_below="@id/option_button_option1"
                android:id="@+id/option_textlogin"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/app_text_color"
                android:fontFamily="@font/roboto_regular"
                android:layout_centerHorizontal="true"
                android:textSize="22sp"
                android:text="@string/already_have_acccont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:visibility="invisible"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/option_textlogin"
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" />
        </RelativeLayout>

</ScrollView>