<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f6f6"
    android:orientation="vertical"
    tools:context=".ui.activities.PaymentActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <include

            android:id="@+id/app_bar"
            layout="@layout/app_bar_default" />

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:layout_marginBottom="1dp"
            android:indeterminate="true"
            />

        <RelativeLayout

            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:gravity="center"
                android:background="@drawable/phone_field_style"
                android:theme="@style/TextLabel"
                android:id="@+id/user_phonenumber"
                android:layout_width="210dp"
                android:layout_height="50dp"
                android:inputType="phone"
                android:hint="@string/enter_your_phone_number"
                android:textSize="15sp"
                />
            <Spinner

                android:id="@+id/operators_name"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/user_phonenumber"
                android:layout_width="150dp"
                android:layout_height="50dp"/>

            <RadioButton
                android:layout_below="@id/user_phonenumber"
                android:buttonTint="@color/app_title_color"
                android:textColor="@color/app_title_color"
                android:background="@drawable/payment_choise_withborder"
                android:id="@+id/radio_quantity1"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:text="@string/_10_minutes"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/price1"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="99dp"
                android:layout_alignEnd="@id/radio_quantity1"
                android:textSize="15sp"
                android:textColor="@color/app_text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView

                android:layout_marginStart="43dp"
                android:layout_marginTop="-35dp"
                android:layout_below="@id/radio_quantity1"
                android:textSize="15sp"
                android:textColor="@color/app_text_color"
                android:text="@string/enough_for_1question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <RadioButton
                android:buttonTint="@color/app_title_color"
                android:textColor="@color/app_text_color"
                android:background="@drawable/payment_choise_withoutborder"
                android:layout_below="@id/radio_quantity1"
                android:id="@+id/radio_quantity2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/_20_minutes"
                android:layout_marginTop="15dp"
                android:checked="false"
                android:textSize="18sp" />

            <TextView
                android:layout_marginEnd="20dp"
                android:layout_marginTop="68dp"
                android:layout_below="@id/price1"
                android:id="@+id/price2"
                android:layout_alignEnd="@id/radio_quantity2"
                android:textSize="15sp"
                android:textColor="@color/app_text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:buttonTint="@color/app_title_color"
                android:textColor="@color/app_text_color"
                android:background="@drawable/payment_choise_withoutborder"
                android:layout_below="@id/radio_quantity2"
                android:id="@+id/radio_quantity3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/_30_minutes"
                android:layout_marginTop="15dp"
                android:checked="false"
                android:textSize="18sp" />

            <TextView
                android:layout_marginEnd="20dp"
                android:layout_marginTop="55dp"
                android:layout_below="@id/price2"
                android:id="@+id/price3"
                android:layout_alignEnd="@id/radio_quantity3"
                android:textSize="15sp"
                android:textColor="@color/app_text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <RadioButton
                android:buttonTint="@color/app_title_color"
                android:textColor="@color/app_text_color"
                android:background="@drawable/payment_choise_withoutborder"
                android:layout_below="@id/radio_quantity3"
                android:id="@+id/radio_quantity4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/_60_minutes"
                android:layout_marginTop="15dp"
                android:checked="false"
                android:textSize="18sp" />

            <TextView
                android:layout_marginEnd="20dp"
                android:layout_marginTop="54dp"
                android:layout_below="@id/price3"
                android:id="@+id/price4"
                android:layout_alignEnd="@id/radio_quantity4"
                android:textSize="15sp"
                android:textColor="@color/app_text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/promocode_text"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp"
            android:layout_gravity="center"
            android:text="Have a Promocode?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/payment_button"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_marginBottom="5dp"
            android:background="@drawable/sign_button_style"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/purchase_button"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </LinearLayout>
</ScrollView>
